[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "hpc-helper"
version = "0.1.0"
requires-python = ">=3.8"
dependencies = [
    "click>=8.0",
    "rich>=13.0",
    "pyyaml>=6.0",
    "tomli>=2.0; python_version < '3.11'",
]

[project.scripts]
hpc = "hpc_helper.cli:cli"

[tool.setuptools.packages.find]
where = ["."]
include = ["hpc_helper*"]
